# ac-desktop

./: README.md
Final/: CMakeLists.txt  error.cpp  error.h  error.ui  first.cpp  first.h  first.ui  functions.cpp  functions.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reg.cpp  reg.h  reg.json  reg.ui
